--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     "license": "GPL-3.0",
     "autoload": {
         "psr-4": {
-            "Ptinosq\\Prismic4d\\": "src/"
+            "Prismic4d": "src/"
         }
     },
     "authors": [
         {
             "name": "Constantinos Psomadakis",
-            "email": "tinosps@gmail.com"
+            "email": "business@tinosps.com"
         }
     ]
 }
