--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "require": {
         "guzzlehttp/guzzle": "^7.5"
     },
-    "license": "GPL-3.0",
+    "license": "GPL-3.0-only",
     "autoload": {
         "psr-4": {
-            "Prismic4d": "src/"
+            "pTinosq\\Prismic4D\\": "src/"
         }
     },
     "authors": [
